--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </style>
 </head>
 <body class="font">
-       <header class="mx-auto sm:max-w- lg:max-w-[1170px]">
-        <nav class="mb-[54px]">
+       <header class="mx-auto max-w-[580px] lg:max-w-[1170px] mt-12">
+        <nav class="mb-[20px]">
             <div class="navbar">
                 <div class="navbar-start">
 
@@ -51,7 +51,7 @@
                         </defs>
                       </svg>
                   </button>
-                  <button class="btn bg-[#FF4240] text-white">Get Ticket</button>
+                  <button class="btn w-[120px] lg:w-[148px] bg-[#FF4240] text-white">Get Ticket</button>
                 </div>
               </div>
           
@@ -61,21 +61,21 @@
              <div class="bgi relative">
                 <div class="carousel w-full">
                     <div id="slide1" class="carousel-item relative w-full">
-                      <img src="Images/1.png" class="h-[550px] w-full" />
-                      <div class="absolute gap-2 flex left-12 top-[460px]">
+                      <img src="Images/1.png" class="mx-5 h-[300px] lg:h-[550px] w-full" />
+                      <div class="absolute gap-2 flex left-[250px] lg:left-12 top-[220px] lg:top-[460px]">
                         <a href="#slide4" class="btn border-0 btn-circle bg-black text-white">❮</a> 
                         <a href="#slide2" class="btn border-0 btn-circle bg-black text-white">❯</a>
                       </div>
                     </div> 
                     <div id="slide2" class="carousel-item relative w-full">
-                      <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full" />
+                      <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full " />
                       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle">❮</a> 
                         <a href="#slide3" class="btn btn-circle">❯</a>
                       </div>
                     </div> 
                 </div>
-                <div class="absolute bg-black left-[572px] top-[353px] border-0 rounded-2xl p-8 w-[566px] h-[165px] text-white" >
+                <div class="mx-4 mt-4 lg:absolute bg-black left-[572px] top-[353px] border-0 rounded-2xl p-8 w-[566px] h-[165px] text-white" >
                      <h1 class="font-bold text-xl mb-2">Meet all the heroes from the field</h1>
                      <h1 class="opacity-60">grab your opportunity and meet heroes</h1>
                 </div>    
