--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- pro hockey club -->
         <section class="mt-[60px] lg:mt-[70px]">
             <div class="border-dashed border-[1px] h-[200px] p-8">
-               <h1 class="text-2xl lg:text-3xl font-extrabold ml-24 lg:flex justify-center ">Professional Hockeys Club</h1>
+               <h1 class="text-2xl lg:text-3xl font-extrabold ml-24 text-center ">Professional Hockeys Club</h1>
                <p class="mt-6 text-[#0d0d1263] ml-8 lg:text-center lg:ml-16">Hockey clubs are organizations or teams dedicated  to the sport of hockey. </p>
             </div>
             <div class="mt-[30px] ml-40  lg:mt[80px] grid grid-cols-1 lg:grid-cols-4 ">
@@ -126,7 +126,69 @@
                 </div>
             </div>
         </section>
+        <!-- program sec -->
+        <section class="mt-[60px] lg:mt-[70px]">
+            <div class="border-dashed mb-12 border-[1px] h-[200px] p-8">
+                <h1 class="text-2xl lg:text-3xl font-extrabold ml-24 lg:flex justify-center ">Program Sections</h1>
+                <p class="mt-6 text-[#0d0d1263] ml-8 lg:text-center lg:ml-16">Hockey clubs are organizations or teams dedicated  to the sport of hockey. </p>
+             </div>
+             <div>
+                <div class="lg:flex h-[338px]
+                 gap-6 rounded-2">
+                    <div class="hero " style="background-image: url('Images/2.png');">
+                        <div class="hero-overlay rounded-xl bg-opacity-60"></div>
+                        <div class="hero-content  text-neutral-content">
+                          <div class="max-w-md">
+                            <h1 class="mb-5 mt-[75px] text-3xl mt font-bold">Junior Program</h1>
+                            <p class="mb-5">It's important to note that the specifics can vary widely between different hockey clubs, as they operate in diverse contexts and regions. </p>
+                            <button class="btn w-[120px] border-none lg:w-[148px] bg-[#FF4240] text-white">Register Now !</button>
+                          </div>
+                        </div>
+                      </div>
 
+                      <div class="hero mt-6 lg:mt-0" style="background-image: url('Images/3.png');">
+                        <div class="hero-overlay rounded-xl bg-opacity-60"></div>
+                        <div class="hero-content  text-neutral-content">
+                          <div class="max-w-md">
+                            <h1 class="mb-5 mt-[75px] text-3xl font-bold">Teenager Program</h1>
+                            <p class="mb-5">It's important to note that the specifics can vary widely between different hockey clubs, as they operate in diverse contexts and regions.</p>
+                            <button class="btn w-[120px] border-none lg:w-[148px] bg-[#FF4240] text-white">Register Now !</button>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="lg:hidden hero mt-6 h-[450px] rounded-xl" style="background-image: url('Images/4.png');">
+                        <div class="hero-overlay rounded-xl bg-opacity-60"></div>
+                        <div class="  text-neutral-content">
+                          <div >
+                            <h1 class="mb-5 mt-[205px] text-3xl font-bold">Professional Program</h1>
+                            <p class="mb-5">It's important to note that the specifics can vary widely between  different  hockey clubs, as they operate in diverse contexts and regions.</p>
+                            <button class="btn w-[120px] border-none lg:w-[148px] bg-[#FF4240] text-white">Register Now !</button>
+                          </div>
+                        </div>
+                      </div>
+
+                     
+                      </div>
+
+                </div>
+                <div>
+                   
+                    <div class="hidden lg:grid hero mt-6 h-[450px] rounded-xl" style="background-image: url('Images/4.png');">
+                        <div class="hero-overlay rounded-xl bg-opacity-60"></div>
+                        <div class="  text-neutral-content">
+                          <div >
+                            <h1 class="mb-5 mt-[205px] text-3xl font-bold">Professional Program</h1>
+                            <p class="mb-5">It's important to note that the specifics can vary widely between  different  hockey clubs, as they operate in diverse contexts and regions.</p>
+                            <button class="btn w-[120px] border-none lg:w-[148px] bg-[#FF4240] text-white">Register Now !</button>
+                          </div>
+                        </div>
+                      </div>
+
+                </div>
+             </div>
+
+        </section>
        </main>
        <footer>
 
