--- a/index.html
+++ b/index.html
@@ -525,8 +525,48 @@
               </svg>
          </div>
        </main>
-       <footer>
 
-       </footer>
+       <footer class="footer grid-rows-2 p-[135px] bg-black text-neutral-content">
+        <nav>
+          <header class=" text-2xl text-white">Get In Touch</header> 
+          <p class="footer-title mt-4">It's important to note that the specifics can vary widely <br>
+         between different hockey clubs, as they operate in diverse <br> contexts and regions.</p>
+        </nav> 
+        <nav>
+          <header class="footer-title">Company</header> 
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav> 
+        <nav>
+          <header class="footer-title">Legal</header> 
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav> 
+        <nav>
+          <header class="footer-title">Social</header> 
+          <a class="link link-hover">Twitter</a>
+          <a class="link link-hover">Instagram</a>
+          <a class="link link-hover">Facebook</a>
+          <a class="link link-hover">Github</a>
+        </nav> 
+        <nav>
+          <header class="footer-title">Explore</header> 
+          <a class="link link-hover">Features</a>
+          <a class="link link-hover">Enterprise</a>
+          <a class="link link-hover">Security</a>
+          <a class="link link-hover">Pricing</a>
+        </nav> 
+        <nav>
+          <header class="footer-title">Apps</header> 
+          <a class="link link-hover">Mac</a>
+          <a class="link link-hover">Windows</a>
+          <a class="link link-hover">iPhone</a>
+          <a class="link link-hover">Android</a>
+        </nav>
+      </footer>
+       
 </body>
 </html>hkj.lmn/
